<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/user_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
    </group>
    <item android:title="@string/shareSets">
        <menu>
            <item
                android:id="@+id/user_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/user_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>
</menu>